objects/Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>Ideal_Testing_Completion_Date__c</fullName>
        <description>OnSite Solution field</description>
        <label>Ideal Testing Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implemenation_Type__c</fullName>
        <label>Implemenation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Dedicated</fullName>
                </value>
                <value>
                    <fullName>Semi-Dedicated</fullName>
                </value>
                <value>
                    <fullName>Decentralized</fullName>
                </value>
                <value>
                    <fullName>Mixed Bag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_SA_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation &amp; SA Team</label>
        <referenceTo>SMM_Implementations__c</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Users_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Users Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_account_creation_completed__c</fullName>
        <label>Hotel set-up completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquisium_Response_Number__c</fullName>
        <label>Inquisium Response Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integrations_Team_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Interface worksheet must be completed prior</inlineHelpText>
        <label>Integrations Team case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Onboarding (Integrations Team case)</relationshipLabel>
        <relationshipName>Onboarding2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interface_Information_Received__c</fullName>
        <inlineHelpText>Date client returned Interface portion of workbook</inlineHelpText>
        <label>Interface Information Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interface_Testing_Vendor_Contact__c</fullName>
        <label>Interface Testing Vendor Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kick_off_Call_Scheduled__c</fullName>
        <label>Kick off Call Scheduled On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kick_off_Call_completed__c</fullName>
        <label>Kick off Call completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kick_off_Date__c</fullName>
        <label>Kick off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kick_off_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kick off Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_App_Resubmission__c</fullName>
        <description>Field requested by Sushil Kapoor #11162018</description>
        <label>Last App Resubmission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_App_Resubmission_check__c</fullName>
        <description># 11169818</description>
        <formula>IF(TODAY() - Last_App_Resubmission__c &gt;= 60, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last App Resubmission check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Score_Comment__c</fullName>
        <label>Launch Score Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Score__c</fullName>
        <label>Launch Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Extremely Likely to be Successful</fullName>
                </value>
                <value>
                    <fullName>4 - Likely to be Successful</fullName>
                </value>
                <value>
                    <fullName>3 - Unsure</fullName>
                </value>
                <value>
                    <fullName>2 - Not Likely to be Successful</fullName>
                </value>
                <value>
                    <fullName>1 - Very Unlikely to be Successful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Launch_Status_Date__c</fullName>
        <label>Launch Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Launched_Days_Count__c</fullName>
        <label>Launched Days Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Company_name__c</fullName>
        <label>Legacy Company name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Social Tables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Migrated_ID__c</fullName>
        <label>Legacy Migrated ID</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_FPC__c</fullName>
        <label>Link to FPC</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MPCP_sent__c</fullName>
        <label>MPCP sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Foreseeable_Event__c</fullName>
        <label>Next Foreseeable Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_CSR_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No CSR Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_LG_PVC_Printers_RFID_NFC_Cap__c</fullName>
        <label># of LG PVC Printers  (RFID/NFC Capable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Days_Count__c</fullName>
        <label>On Hold Days Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarding_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onboarding_Status_L2__c</fullName>
        <label>Onboarding Status L2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Client Uninterested</fullName>
                </value>
                <value>
                    <fullName>Mistake/Duplicate</fullName>
                </value>
                <value>
                    <fullName>Cancelled Contract</fullName>
                </value>
                <value>
                    <fullName>PSG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onbrdng_Intgrtn_testing_Docs_add_2_box__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Includes Workbook, images, testing docs, etc</inlineHelpText>
        <label>All client docs added to Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Days_Count__c</fullName>
        <label>Open Days Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_CSN__c</fullName>
        <formula>TEXT(Account_Name__r.Original_A_c_Owner_CSN__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner CSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Event__c</fullName>
        <formula>TEXT( Account_Name__r.Original_A_c_Owner_Event__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Survey__c</fullName>
        <formula>TEXT(Account_Name__r.Original_A_c_Owner_Survey__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Survey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Contacts</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Onboarding (Other Contacts)</relationshipLabel>
        <relationshipName>Onboarding1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oversold_Comment__c</fullName>
        <label>Post Purchase Concern Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oversold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Purchase Concern</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>Owner:User.Profile_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Peer_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSG Peer Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSG_consultant_assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSG consultant assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passkey_PSG_Team_configuration_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Passkey PSG Team configuration case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Onboarding (Passkey PSG Team configuration case)</relationshipLabel>
        <relationshipName>Onboarding1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passkey_PSG_Team_initial_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Passkey PSG Team initial case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passkey_Settings_complete__c</fullName>
        <label>Passkey Settings complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permissions_Granted__c</fullName>
        <label>Permissions Granted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_II_Trainer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase II Trainer Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase_II_Training_Completed__c</fullName>
        <label>Phase II Training Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_II_Training_Date_Confirmed__c</fullName>
        <label>Phase II Training Date Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_I_Trainer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase I Trainer Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase_I_Training_Completed__c</fullName>
        <label>Phase I Training Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_I_Training_Date_Confirmed__c</fullName>
        <label>Phase I Training Date Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Event_CSR__c</fullName>
        <description>Name Changed from Post Event CSR based on Project (P-003135)</description>
        <label>CSR Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Purchase_Reason__c</fullName>
        <label>Post Purchase Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Oversold__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Expectations</fullName>
                </value>
                <value>
                    <fullName>Timelines</fullName>
                </value>
                <value>
                    <fullName>Contracting Issue</fullName>
                </value>
                <value>
                    <fullName>Not a Fit/Workaround Reliant</fullName>
                </value>
                <value>
                    <fullName>Presold Feature</fullName>
                </value>
                <value>
                    <fullName>No TSC/Demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abstract</fullName>
                </value>
                <value>
                    <fullName>Appointments</fullName>
                </value>
                <value>
                    <fullName>ARI</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>Event Connector</fullName>
                </value>
                <value>
                    <fullName>Event Management</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Flex</fullName>
                </value>
                <value>
                    <fullName>Grouplink Only</fullName>
                </value>
                <value>
                    <fullName>GroupMasterLink</fullName>
                </value>
                <value>
                    <fullName>Hotel Content Package A</fullName>
                </value>
                <value>
                    <fullName>Hotel Content Package B</fullName>
                </value>
                <value>
                    <fullName>Hotel Directory</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Marketplace Intelligence</fullName>
                </value>
                <value>
                    <fullName>Merchant Account</fullName>
                </value>
                <value>
                    <fullName>Nor1</fullName>
                </value>
                <value>
                    <fullName>OnArrival</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>Rate Audit</fullName>
                </value>
                <value>
                    <fullName>Rate Availability</fullName>
                </value>
                <value>
                    <fullName>Rate Parity</fullName>
                </value>
                <value>
                    <fullName>Reverse Auction</fullName>
                </value>
                <value>
                    <fullName>Reverse Audit</fullName>
                </value>
                <value>
                    <fullName>Room List Manager</fullName>
                </value>
                <value>
                    <fullName>Room List Manager only</fullName>
                </value>
                <value>
                    <fullName>Social Tables</fullName>
                </value>
                <value>
                    <fullName>Social Wall</fullName>
                </value>
                <value>
                    <fullName>Transient Sourcing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <label>Property Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Check_of_RFP_program_s__c</fullName>
        <label>Quality Check of RFP program(s) Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Audit_Products_activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rate Audit Products activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case # 07040692</description>
        <label>Re-onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_APAC__c</fullName>
        <label>Region - APAC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_EMEA__c</fullName>
        <label>Region - EMEA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_LATAM__c</fullName>
        <label>Region - LATAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_NORAM__c</fullName>
        <label>Region - NORAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_System__c</fullName>
        <label>Registration System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_Auction_activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Auction activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPORG_Created_updated__c</fullName>
        <label>SPORG Created/updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPORG_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPORG Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ST_Account_Id__c</fullName>
        <formula>Account_Name__r.ST_Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ST Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Tier__c</fullName>
        <formula>Account_Name__r.Service_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_included__c</fullName>
        <label>Services included</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Badge Printing</fullName>
                </value>
                <value>
                    <fullName>Onsite Support</fullName>
                </value>
                <value>
                    <fullName>Premium Supplies</fullName>
                </value>
                <value>
                    <fullName>Premium Equipment</fullName>
                </value>
                <value>
                    <fullName>Event Registration</fullName>
                </value>
                <value>
                    <fullName>OnSite Registration</fullName>
                </value>
                <value>
                    <fullName>Session Access Control</fullName>
                </value>
                <value>
                    <fullName>Session Tracking</fullName>
                </value>
                <value>
                    <fullName>LeadCapture Device Rental</fullName>
                </value>
                <value>
                    <fullName>LeadCapture Application Only</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass Lead Retrieval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Single_or_multiple_event_usage__c</fullName>
        <label>Single or multiple event usage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sourcing_Status_Notes__c</fullName>
        <formula>Account_Name__r.CSN_Status_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourcing Status Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Edit_Date__c</fullName>
        <label>Status Edit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>In Event Services Onboarding</fullName>
                </value>
                <value>
                    <fullName>Account Created and Welcome Email Sent</fullName>
                </value>
                <value>
                    <fullName>Information Requested</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                </value>
                <value>
                    <fullName>Coordination Complete</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>Pending Future Activity</fullName>
                </value>
                <value>
                    <fullName>Post Event</fullName>
                </value>
                <value>
                    <fullName>Post Survey</fullName>
                </value>
                <value>
                    <fullName>Introduction Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>Introduction Call completed</fullName>
                </value>
                <value>
                    <fullName>Customer Workbook Sent</fullName>
                </value>
                <value>
                    <fullName>Customer Workbook Completed</fullName>
                </value>
                <value>
                    <fullName>Configuring System</fullName>
                </value>
                <value>
                    <fullName>Introduction Email Sent</fullName>
                </value>
                <value>
                    <fullName>Collateral Received</fullName>
                </value>
                <value>
                    <fullName>Submitted to be Created</fullName>
                </value>
                <value>
                    <fullName>Needs Client Follow Up</fullName>
                </value>
                <value>
                    <fullName>Sent for Approval</fullName>
                </value>
                <value>
                    <fullName>Revision</fullName>
                </value>
                <value>
                    <fullName>Sent for Implementation</fullName>
                </value>
                <value>
                    <fullName>Implemented by Customer</fullName>
                </value>
                <value>
                    <fullName>Project Coordinator Collecting Floor Plan Files</fullName>
                </value>
                <value>
                    <fullName>Custom CAD</fullName>
                </value>
                <value>
                    <fullName>Floor Plans Received</fullName>
                </value>
                <value>
                    <fullName>Floor Plans Submitted to be Drawn</fullName>
                </value>
                <value>
                    <fullName>Floor Plans Ready for Customer Review</fullName>
                </value>
                <value>
                    <fullName>Floor Plans Approved by Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Experience_Event_Cloud__c</fullName>
        <formula>TEXT(Account_Name__r.Success_Experience__c)</formula>
        <label>Success Experience (Event Cloud)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Plan__c</fullName>
        <label>Success Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Invitation_Sent__c</fullName>
        <label>Survey Invitation Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Received_Date__c</fullName>
        <label>Survey Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surveys_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Surveys (New)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TPP_CS_Tier__c</fullName>
        <formula>TEXT( Account_Name__r.TPP_CS_Tier__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPP CS Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPP_Contact_Type__c</fullName>
        <formula>Text( Contact_Name__r.TPP_Contact_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPP Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TempField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Parties_Used__c</fullName>
        <label>Third Parties Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Partners__c</fullName>
        <label>Third Party Partners</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Total__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Total</label>
        <referenceTo>WorkIt2__Case_Time_Total__c</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>